[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.95", default-features = false }
js-sys = { version = "0.3.72", default-features = false }
web-sys = { version = "0.3.72", default-features = false, features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "Text",
    "History",
    "Location",
    "console",
    "Window",
    "Event",
    "EventTarget",
    "HtmlInputElement",
    "KeyboardEvent",
    "MouseEvent",
    "CssStyleDeclaration",
    "DomTokenList",
    "XmlHttpRequest",    # Add this
    "Response",
    "Performance"
]}
log = "0.4"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
itoa = "1.0.11"
once_cell = "1.20.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
